
nobase_dist_pkgdata_DATA = \
  guile/geiser/completion.scm \
  guile/geiser/doc.scm \
  guile/geiser/emacs.scm \
  guile/geiser/evaluation.scm \
  guile/geiser/modules.scm \
  guile/geiser/utils.scm \
  guile/geiser/xref.scm \
  plt/geiser.ss \
  plt/geiser/autodoc.ss \
  plt/geiser/completions.ss \
  plt/geiser/eval.ss \
  plt/geiser/locations.ss \
  plt/geiser/modules.ss \
  plt/geiser/utils.ss
